--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -243,94 +243,89 @@
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
             <child>
-              <widget class="GtkHBox" id="hbox1">
+              <widget class="GtkToolbar" id="vm-toolbar">
                 <property name="visible">True</property>
+                <property name="show_arrow">False</property>
                 <child>
-                  <widget class="GtkToolbar" id="vm-toolbar1">
+                  <widget class="GtkToolButton" id="vm-new">
                     <property name="visible">True</property>
-                    <property name="show_arrow">False</property>
-                    <child>
-                      <widget class="GtkToolButton" id="vm-new">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Create a new virtual machine</property>
-                        <property name="label" translatable="yes">_New</property>
-                        <property name="use_underline">True</property>
-                        <property name="icon_name">vm_new_large</property>
-                        <signal name="clicked" handler="on_vm_new_clicked"/>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="homogeneous">True</property>
-                      </packing>
-                    </child>
-                  </widget>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <widget class="GtkToolbar" id="vm-toolbar2">
-                    <property name="visible">True</property>
-                    <property name="show_arrow">False</property>
-                    <child>
-                      <widget class="GtkToolButton" id="vm-open">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Show the virtual machine's details</property>
-                        <property name="label" translatable="yes">_Open</property>
-                        <property name="use_underline">True</property>
-                        <property name="icon_name">icon_console</property>
-                        <signal name="clicked" handler="on_vm_open_clicked"/>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="homogeneous">True</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkToolButton" id="vm-run">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Power on the virtual machine</property>
-                        <property name="label" translatable="yes">_Run</property>
-                        <property name="use_underline">True</property>
-                        <property name="stock_id">gtk-media-play</property>
-                        <signal name="clicked" handler="on_vm_run_clicked"/>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="homogeneous">True</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkToggleToolButton" id="vm-pause">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Pause the virtual machine</property>
-                        <property name="label" translatable="yes">_Pause</property>
-                        <property name="use_underline">True</property>
-                        <property name="stock_id">gtk-media-pause</property>
-                        <signal name="clicked" handler="on_vm_pause_clicked"/>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="homogeneous">True</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkMenuToolButton" id="vm-shutdown">
-                        <property name="visible">True</property>
-                        <property name="tooltip" translatable="yes">Shutdown the virtual machine</property>
-                        <property name="label" translatable="yes">_Shutdown</property>
-                        <property name="use_underline">True</property>
-                        <signal name="clicked" handler="on_vm_shutdown_clicked"/>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                      </packing>
-                    </child>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip" translatable="yes">Create a new virtual machine</property>
+                    <property name="label" translatable="yes">New</property>
+                    <property name="use_underline">True</property>
+                    <property name="icon_name">vm_new_large</property>
+                    <signal name="clicked" handler="on_vm_new_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="pack_type">end</property>
-                    <property name="position">1</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkSeparatorToolItem" id="toolbutton1">
+                    <property name="visible">True</property>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkToolButton" id="vm-open">
+                    <property name="visible">True</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip" translatable="yes">Show the virtual machine's details</property>
+                    <property name="label" translatable="yes">_Open</property>
+                    <property name="use_underline">True</property>
+                    <property name="icon_name">icon_console</property>
+                    <signal name="clicked" handler="on_vm_open_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkToolButton" id="vm-run">
+                    <property name="visible">True</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip" translatable="yes">Power on the virtual machine</property>
+                    <property name="label" translatable="yes">_Run</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-media-play</property>
+                    <signal name="clicked" handler="on_vm_run_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkToggleToolButton" id="vm-pause">
+                    <property name="visible">True</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip" translatable="yes">Pause the virtual machine</property>
+                    <property name="label" translatable="yes">_Pause</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-media-pause</property>
+                    <signal name="clicked" handler="on_vm_pause_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkMenuToolButton" id="vm-shutdown">
+                    <property name="visible">True</property>
+                    <property name="has_tooltip">True</property>
+                    <property name="tooltip" translatable="yes">Shutdown the virtual machine</property>
+                    <property name="label" translatable="yes">_Shutdown</property>
+                    <property name="use_underline">True</property>
+                    <signal name="clicked" handler="on_vm_shutdown_clicked"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
                   </packing>
                 </child>
               </widget>
