manager: enable menu key to open context menu

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -347,6 +347,7 @@
                     <property name="can_focus">True</property>
                     <signal name="button_press_event" handler="on_vm_list_button_press_event"/>
                     <signal name="row_expanded" handler="on_vm_list_row_expanded"/>
+                    <signal name="key_press_event" handler="on_vm_list_key_press_event"/>
                     <signal name="row_collapsed" handler="on_vm_list_row_collapsed"/>
                     <signal name="row_activated" handler="on_vm_list_row_activated"/>
                   </widget>
