manager: Bring back multiple graph as an option.
Essentially a revert of the changes in 09189003ddf9

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -158,33 +158,31 @@
                         <child>
                           <widget class="GtkMenu" id="menu1">
                             <property name="visible">True</property>
-                            <child>
-                              <widget class="GtkRadioMenuItem" id="menu_view_stats_cpu">
+                           <child>
+                              <widget class="GtkCheckMenuItem" id="menu_view_stats_cpu">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">CPU</property>
+                                <property name="label" translatable="yes">CPU Usage</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_as_radio">True</property>
-                                <signal name="toggled" handler="on_menu_view_stats_cpu_toggled"/>
+                                <property name="active">True</property>
+                                <signal name="activate" handler="on_menu_view_cpu_usage_activate"/>
+                              </widget>
+                            </child>
+                           <child>
+                              <widget class="GtkCheckMenuItem" id="menu_view_stats_disk">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Disk I/O</property>
+                                <property name="use_underline">True</property>
+                                <property name="active">True</property>
+                                <signal name="activate" handler="on_menu_view_disk_io_activate"/>
                               </widget>
                             </child>
                             <child>
-                              <widget class="GtkRadioMenuItem" id="menu_view_stats_disk">
+                              <widget class="GtkCheckMenuItem" id="menu_view_stats_network">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Disk</property>
+                                <property name="label" translatable="yes">Network I/O</property>
                                 <property name="use_underline">True</property>
-                                <property name="draw_as_radio">True</property>
-                                <property name="group">menu_view_stats_cpu</property>
-                                <signal name="toggled" handler="on_menu_view_stats_disk_toggled"/>
-                              </widget>
-                            </child>
-                            <child>
-                              <widget class="GtkRadioMenuItem" id="menu_view_stats_network">
-                                <property name="visible">True</property>
-                                <property name="label" translatable="yes">Network</property>
-                                <property name="use_underline">True</property>
-                                <property name="draw_as_radio">True</property>
-                                <property name="group">menu_view_stats_cpu</property>
-                                <signal name="toggled" handler="on_menu_view_stats_network_toggled"/>
+                                <property name="active">True</property>
+                                <signal name="activate" handler="on_menu_view_network_traffic_activate"/>
                               </widget>
                             </child>
                           </widget>
