details: Allow selecting video labels

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3584,6 +3584,7 @@ I/O:</property>
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label">label</property>
+                                            <property name="selectable">True</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -3598,6 +3599,7 @@ I/O:</property>
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label">label</property>
+                                            <property name="selectable">True</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -3663,6 +3665,7 @@ I/O:</property>
                                                 <property name="visible">True</property>
                                                 <property name="xalign">0</property>
                                                 <property name="label">label</property>
+                                                <property name="selectable">True</property>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
